--- a/chat/templates/main.html
+++ b/chat/templates/main.html
@@ -8,20 +8,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
     {% comment %} <link rel="stylesheet" href="{% static 'styles/style.css' %}" /> {% endcomment %}
-    <title>StudyBuddy - Find study partners around the world!</title>
+    <title>Chat application</title>
 </head>
 
 <body>
 
     {% include 'navbar.html' %}
 
-    {% comment %} {% if messages %}
+    {% if messages %}
     <ul class="messages">
         {% for message in messages %}
         <li>{{ message }}</li>
         {% endfor %}
     </ul>
-    {% endif %} {% endcomment %}
+    {% endif %}
 
     {% block content %}
 
