--- a/chat/templates/navbar.html
+++ b/chat/templates/navbar.html
@@ -6,4 +6,10 @@
     <input type="text" name="q" placeholder="Search ...">
 </form>
 
+{% if request.user.is_authenticated %}
+<a href ="{%url 'logout'%}">Logout</a>
+{% else %}
+<a href = "{%url 'login_page'%}">Login</a>
+{% endif %}
+
 <hr>
